# qAppMonitoring

./: AddServerPage.qml  AppTheme.qml  CMakeLists.txt  CPUView.qml  DashBoardPage.qml  DiskDelegate.qml  GPUView.qml  LoginPage.qml  Main.qml  MetricCard.qml  NetworkView.qml  ProcessView.qml  RAMView.qml  SettingsPage.qml  StorageManager.qml  main.cpp
gui_widgets/: AddServerPage.qml  AppTextField.qml  AppTheme.qml  CPUView.qml  DashBoardPage.qml  GPUView.qml  LoginPage.qml  Main.qml  MetricCard.qml  NetworkView.qml  ProcessView.qml  RAMView.qml  Router.qml  SettingsPage.qml  SplashView.qml
